--- a/views/sale_order_views.xml
+++ b/views/sale_order_views.xml
@@ -7,6 +7,10 @@
             <xpath expr="//header" position="inside">
                 <field name="fulfillment_state" widget="statusbar" statusbar_visible="new,planned,delivered,invoiced"/>
             </xpath>
+            <xpath expr="//group[@name='sale_header']" position="inside">
+                <field name="schedule_date"/>
+                <field name="priority"/>
+            </xpath>
             <xpath expr="//div[@name='button_box']" position="inside">
                 <button name="action_view_fulfillment_batches" type="object" class="oe_stat_button" icon="fa-cubes"
                         modifiers="{'invisible': [('fulfillment_batch_count', '=', 0)]}">
@@ -15,6 +19,7 @@
             </xpath>
             <xpath expr="//field[@name='order_line']/tree/field[@name='product_uom_qty']" position="after">
                 <field name="fulfillment_state" widget="badge"/>
+                <field name="reserved"/>
             </xpath>
         </field>
     </record>
