--- a/views/sale_order_views.xml
+++ b/views/sale_order_views.xml
@@ -23,4 +23,16 @@
             </xpath>
         </field>
     </record>
+
+    <record id="view_sale_order_tree_fulfillment" model="ir.ui.view">
+        <field name="name">sale.order.tree.fulfillment</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_tree"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='date_order']" position="after">
+                <field name="schedule_date" optional="show"/>
+                <field name="priority" optional="show"/>
+            </xpath>
+        </field>
+    </record>
 </odoo>
