--- a/views/planning_batch_views.xml
+++ b/views/planning_batch_views.xml
@@ -20,6 +20,8 @@
                     <field name="status" widget="statusbar" statusbar_visible="draft,shortage_analyzed,calculated,confirmed,done"/>
                     <button name="action_open_select_sales_orders" type="object" string="Select Sales Orders"
                             class="btn-primary" modifiers="{'invisible': [('status', '!=', 'draft')]}"/>
+                    <button name="action_analyze_structure" type="object" string="Analyze Structure"
+                            class="btn-secondary" modifiers="{'invisible': [('status', 'not in', ['draft', 'shortage_analyzed'])]}"/>
                     <button name="action_analyze_shortage" type="object" string="Analyze Shortage"
                             class="btn-secondary" modifiers="{'invisible': [('status', 'not in', ['draft', 'shortage_analyzed'])]}"/>
                     <button name="action_create_suggested_mo" type="object" string="Create MOs"
@@ -70,6 +72,24 @@
                                         </div>
                                     </div>
                                     <div class="fp_kpi_card">
+                                        <div class="fp_kpi_label">Semi Products</div>
+                                        <div class="fp_kpi_value">
+                                            <field name="semi_product_count" nolabel="1"/>
+                                        </div>
+                                    </div>
+                                    <div class="fp_kpi_card">
+                                        <div class="fp_kpi_label">Raw Products</div>
+                                        <div class="fp_kpi_value">
+                                            <field name="raw_product_count" nolabel="1"/>
+                                        </div>
+                                    </div>
+                                    <div class="fp_kpi_card">
+                                        <div class="fp_kpi_label">Explosion Issues</div>
+                                        <div class="fp_kpi_value">
+                                            <field name="explosion_issue_count" nolabel="1"/>
+                                        </div>
+                                    </div>
+                                    <div class="fp_kpi_card">
                                         <div class="fp_kpi_label">Shortage Count</div>
                                         <div class="fp_kpi_value">
                                             <field name="shortage_count" nolabel="1"/>
@@ -85,6 +105,12 @@
                                         <div class="fp_kpi_label">MOs Created</div>
                                         <div class="fp_kpi_value">
                                             <field name="mo_created_count" nolabel="1"/>
+                                        </div>
+                                    </div>
+                                    <div class="fp_kpi_card">
+                                        <div class="fp_kpi_label">Last Structure Run</div>
+                                        <div class="fp_kpi_value">
+                                            <field name="explosion_last_run" nolabel="1"/>
                                         </div>
                                     </div>
                                     <div class="fp_kpi_card">
@@ -311,6 +337,50 @@
                                 </form>
                             </field>
                         </page>
+                        <page string="Explosion">
+                            <group>
+                                <button name="action_analyze_structure" type="object" string="Analyze Structure"
+                                        class="btn-secondary"/>
+                                <button name="action_open_manufacturing_chain" type="object" string="Open Manufacturing Chain"
+                                        class="btn-secondary"/>
+                            </group>
+                            <group>
+                                <field name="explosion_last_run" readonly="1"/>
+                                <field name="explosion_last_run_by" readonly="1"/>
+                            </group>
+                            <group string="Explosion Nodes">
+                                <field name="explosion_node_ids">
+                                    <tree create="0" edit="0" delete="0">
+                                        <field name="level"/>
+                                        <field name="parent_product_id"/>
+                                        <field name="product_id"/>
+                                        <field name="demand_qty"/>
+                                        <field name="uom_id"/>
+                                        <field name="item_type"/>
+                                        <field name="supply_type"/>
+                                        <field name="bom_id"/>
+                                        <field name="state"/>
+                                        <field name="message"/>
+                                    </tree>
+                                </field>
+                            </group>
+                            <group string="Demand Summary">
+                                <field name="demand_summary_ids">
+                                    <tree create="0" edit="0" delete="0">
+                                        <field name="product_id"/>
+                                        <field name="manufacture_demand_qty"/>
+                                        <field name="procurement_demand_qty"/>
+                                        <field name="total_demand_qty"/>
+                                        <field name="available_qty"/>
+                                        <field name="uncovered_qty"/>
+                                        <field name="uom_id"/>
+                                        <field name="level_min"/>
+                                        <field name="level_max"/>
+                                        <field name="has_bom"/>
+                                    </tree>
+                                </field>
+                            </group>
+                        </page>
                         <page string="Manufacture">
                             <group>
                                 <button name="action_undo_created_mo" type="object" string="Undo MOs"
@@ -431,6 +501,53 @@
         <field name="name">Planning Batches</field>
         <field name="res_model">planning.batch</field>
         <field name="view_mode">tree,form</field>
+    </record>
+
+    <record id="view_planning_batch_explosion_node_tree" model="ir.ui.view">
+        <field name="name">planning.batch.explosion.node.tree</field>
+        <field name="model">planning.batch.explosion.node</field>
+        <field name="arch" type="xml">
+            <tree default_order="parent_path, id">
+                <field name="parent_id" invisible="1"/>
+                <field name="name"/>
+                <field name="batch_id"/>
+                <field name="level"/>
+                <field name="product_id"/>
+                <field name="demand_qty"/>
+                <field name="uom_id"/>
+                <field name="item_type"/>
+                <field name="supply_type"/>
+                <field name="state"/>
+                <field name="message"/>
+            </tree>
+        </field>
+    </record>
+
+    <record id="view_planning_batch_explosion_node_form" model="ir.ui.view">
+        <field name="name">planning.batch.explosion.node.form</field>
+        <field name="model">planning.batch.explosion.node</field>
+        <field name="arch" type="xml">
+            <form string="Manufacturing Chain Node">
+                <group>
+                    <field name="batch_id" readonly="1"/>
+                    <field name="parent_id" readonly="1"/>
+                    <field name="source_sale_line_id" readonly="1"/>
+                </group>
+                <group>
+                    <field name="level" readonly="1"/>
+                    <field name="parent_product_id" readonly="1"/>
+                    <field name="product_id" readonly="1"/>
+                    <field name="demand_qty" readonly="1"/>
+                    <field name="uom_id" readonly="1"/>
+                    <field name="item_type" readonly="1"/>
+                    <field name="supply_type" readonly="1"/>
+                    <field name="bom_id" readonly="1"/>
+                    <field name="state" readonly="1"/>
+                    <field name="message" readonly="1"/>
+                    <field name="path_key" readonly="1"/>
+                </group>
+            </form>
+        </field>
     </record>
 
     <record id="view_planning_batch_select_so_form" model="ir.ui.view">
