--- a/views/planning_batch_views.xml
+++ b/views/planning_batch_views.xml
@@ -349,8 +349,8 @@
                                 <field name="explosion_last_run_by" readonly="1"/>
                             </group>
                             <group string="Explosion Nodes">
-                                <field name="explosion_node_ids">
-                                    <tree create="0" edit="0" delete="0">
+                                <field name="explosion_node_ids" domain="[('parent_id', '=', False)]">
+                                    <tree create="0" edit="0" delete="0" import="0" export_xlsx="0">
                                         <field name="level"/>
                                         <field name="parent_product_id"/>
                                         <field name="product_id"/>
@@ -507,8 +507,7 @@
         <field name="name">planning.batch.explosion.node.tree</field>
         <field name="model">planning.batch.explosion.node</field>
         <field name="arch" type="xml">
-            <tree default_order="parent_path, id">
-                <field name="parent_id" invisible="1"/>
+            <tree default_order="id" create="0" edit="0" delete="0" import="0" export_xlsx="0">
                 <field name="name"/>
                 <field name="batch_id"/>
                 <field name="level"/>
@@ -545,6 +544,20 @@
                     <field name="state" readonly="1"/>
                     <field name="message" readonly="1"/>
                     <field name="path_key" readonly="1"/>
+                </group>
+                <group string="Child Nodes">
+                    <field name="child_ids" readonly="1" context="{'default_batch_id': batch_id}">
+                        <tree create="0" edit="0" delete="0" import="0" export_xlsx="0">
+                            <field name="level"/>
+                            <field name="product_id"/>
+                            <field name="demand_qty"/>
+                            <field name="uom_id"/>
+                            <field name="item_type"/>
+                            <field name="supply_type"/>
+                            <field name="state"/>
+                            <field name="message"/>
+                        </tree>
+                    </field>
                 </group>
             </form>
         </field>
