--- a/views/planning_batch_views.xml
+++ b/views/planning_batch_views.xml
@@ -19,21 +19,21 @@
                 <header>
                     <field name="status" widget="statusbar" statusbar_visible="draft,shortage_analyzed,calculated,confirmed,done"/>
                     <button name="action_open_select_sales_orders" type="object" string="Select Sales Orders"
-                            class="btn-primary" modifiers="{'invisible': [('status', 'in', ['calculated', 'confirmed', 'done'])]}"/>
+                            class="btn-primary" modifiers="{'invisible': [('status', '!=', 'draft')]}"/>
                     <button name="action_analyze" type="object" string="Analyze"
-                            class="btn-secondary" modifiers="{'invisible': [('status', 'not in', ['draft', 'shortage_analyzed'])]}"/>
+                            class="btn-secondary" modifiers="{'invisible': [('status', '!=', 'draft')]}"/>
                     <button name="action_create_suggested_mo" type="object" string="Create MOs"
                             class="btn-secondary"
-                            modifiers="{'invisible': [('status', 'in', ['calculated', 'confirmed', 'done'])]}"/>
+                            modifiers="{'invisible': [('status', '!=', 'shortage_analyzed')]}"/>
                     <button name="action_revert_to_draft" type="object" string="Revert to Draft"
                             class="btn-secondary" confirm="This will remove planned manufacturing orders. Continue?"
-                            modifiers="{'invisible': [('status', '!=', 'calculated')]}"/>
+                            modifiers="{'invisible': [('status', 'not in', ['shortage_analyzed', 'calculated'])]}"/>
                     <button name="action_confirm_all_mos" type="object" string="Confirm All MOs"
                             class="btn-primary"
                             modifiers="{'invisible': [('status', '!=', 'calculated')]}"/>
                     <button name="action_check_manufacturing_orders" type="object" string="Check Manufacturing Orders"
                             class="btn-secondary"
-                            modifiers="{'invisible': [('status', '!=', 'confirmed')]}"/>
+                            modifiers="{'invisible': [('status', 'not in', ['calculated', 'confirmed', 'done'])]}"/>
                 </header>
                 <sheet class="fp_sheet fp_sheet--full">
                     <group>
@@ -519,10 +519,6 @@
                             </group>
                         </page>
                         <page string="Manufacture">
-                            <group>
-                                <button name="action_undo_created_mo" type="object" string="Undo MOs"
-                                        class="btn-secondary"/>
-                            </group>
                             <group>
                                 <field name="suggested_mo_created_at" readonly="1"/>
                                 <field name="suggested_mo_created_by" readonly="1"/>
